--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,75 @@
 plugins {
-    id 'java'
+    id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
-group = 'org.example'
+group = 'com.demoqa'
 version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
+def selenideVersion = "6.17.0",
+    jUnitJupiterVersion = "5.10.0",
+    allureSelenideVersion = "2.23.0",
+    slf4jSimpleVersion = "2.0.7",
+    ownerVersion = "1.0.12"
+
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation(
+            "com.codeborne:selenide:$selenideVersion",
+            "org.junit.jupiter:junit-jupiter:$jUnitJupiterVersion",
+            "io.qameta.allure:allure-selenide:$allureSelenideVersion",
+            "org.slf4j:slf4j-simple:$slf4jSimpleVersion",
+            "org.aeonbits.owner:owner:$ownerVersion")
+
 }
 
-test {
-    useJUnitPlatform()
+allure {
+    report {
+        version.set(allureSelenideVersion)
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set(allureSelenideVersion)
+            }
+        }
+    }
 }
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+    systemProperties(System.getProperties())
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
+task login_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("login")
+    }
+}
+
+task books_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("books")
+    }
+}
+
+compileJava {
+    options.encoding = 'UTF-8'
+}
+
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+
+
